# security_service_system

./: CMakeLists.txt  README.md  lv_conf.h
ModelArts_Gesture_interaction/applacation/: applacation.py  hand_app.py  model_m.py  speech_app.py  test.py  volume_app.py
ModelArts_Gesture_interaction/applacation/theme/light/: .tick-vert-basic.png.baiduyun.uploading.cfg
ModelArts_Gesture_interaction/applacation/tools/: draw_bounding_rect.py  draw_landmarks.py  draw_point_history.py  draw_rect_text.py  landmark_handle.py
RK3588_Peripheral_control/: main.c  mainPro
src/: main.cpp
src/assets/images/: face_icon.c  security_camera_icon.c
src/assets/model/: facenet.rknn
src/include/: Camera.hpp  Common.hpp  FFmpeg.hpp  Font.hpp  ImageProcess.hpp  Model.hpp  PageManager.hpp  PostProcess.hpp  RknnPool.hpp  Sensor.hpp  UI.hpp  Util.hpp
src/module/Camera/: Camera.cpp
src/module/FFmpeg/: FFmpeg.cpp
src/module/Font/: Font.cpp
src/module/ImageProcess/: ImageProcess.cpp
src/module/Model/: Model.cpp
src/module/PageManager/: PageManager.cpp
src/module/PostProcess/: PostProcess.cpp
src/module/RknnPool/: RknnPool.cpp
src/module/Sensor/: Sensor.cpp
src/module/UI/: AccessControlPage.cpp  MainPage.cpp  SecurityCameraPage.cpp
src/module/Util/: Util.cpp
